knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Opportunity_Manager_Setting__c/fields/pqcrush__Create_Opportunity_Plan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Create_Opportunity_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Opportunity Plan</label>
    <type>Checkbox</type>
</CustomField>