knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Opportunity_Manager_Setting__c/fields/pqcrush__Days_of_Data_Used_In_Analysis__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Days_of_Data_Used_In_Analysis__c</fullName>
    <label>Days of Data Used In Analysis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>