knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Opportunity_Manager_Setting__c/fields/pqcrush__Opportunity_Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Opportunity_Setting_Name__c</fullName>
    <label>Opportunity Setting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>